documentacion de personas con swagger
